# 3d-pinball-space-cadet

./: .clang-tidy  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  about.cpp  control.cpp  exceptionhandling.cpp  guicon.cpp  help.cpp  highscore.cpp  lights.cpp  memory.cpp  missions.cpp  options.cpp  pinball.c  pinball.cpp  pinball.exe.c  pinball.h  pinball_01.c  pinball_02.c  pinball_03.c  pinball_04.c  pinball_05.c  pinball_06.c  pinball_07.c  pinball_08.c  pinball_09.c  pinball_10.c  pinball_11.c  pinball_12.c  pinball_13.c  pinball_14.c  pinball_15.c  pinball_16.c  pinball_17.c  pinball_18.c  pinball_19.c  pinball_20.c  (+19 more)
.attic/: pinball.exe.bc  pinball.exe.c  pinball.exe.h  pinball.exe.json
Classes/: classes.h
Classes/Objlist/: Objlist.cpp  Objlist_Class.cpp  objlist.h
Classes/Partman/: Partman.h
Classes/TBall/: TBall.cpp  TBall.h
Classes/TBlocker/: TBlocker.cpp  TBlocker.h
Classes/TBumper/: TBumper.cpp  TBumper.h
Classes/TCircle/: TCircle.cpp  TCircle.h
Classes/TCollisionComponent/: TCollisionComponent.cpp  TCollisionComponent.h
Classes/TComponentGroup/: TComponentGroup.cpp  TComponentGroup.h
Classes/TDemo/: TDemo.cpp  TDemo.h
Classes/TDrain/: TDrain.cpp  TDrain.h
Classes/TEdgeBox/: TEdgeBox.cpp  TEdgeBox.h
Classes/TEdgeManager/: TEdgeManager.cpp  TEdgeManager.h
Classes/TEdgeSegment/: TEdgeSegment.cpp  TEdgeSegment.h
Classes/TFlagSpinner/: TFlagSpinner.cpp  TFlagSpinner.h
Classes/TFlipper/: TFlipper.cpp  TFlipper.h
Classes/TFlipperEdge/: TFlipperEdge.cpp  TFlipperEdge.h
Classes/TGate/: TGate.cpp  TGate.h
Classes/THole/: THole.cpp  THole.h
Classes/TKickback/: TKickback.cpp  TKickback.h
Classes/TKickout/: TKickout.cpp  TKickout.h
Classes/TLight/: TLight.cpp  TLight.h
Classes/TLightBargraph/: TLightBargraph.cpp  TLightBargraph.h
Classes/TLightRollover/: TLightRollover.cpp  TLightRollover.h
Classes/TLine/: TLine.cpp  TLine.h
Classes/TOneWay/: TOneWay.cpp  TOneWay.h
Classes/TPinballComponent/: TPinballComponent.cpp  TPinballComponent.h
Classes/TPinballTable/: TPinballTable.cpp  TPinballTable.h
Classes/TPlunger/: TPlunger.cpp  TPlunger.h
Classes/TPopupTarget/: TPopupTarget.cpp  TPopupTarget.h
Classes/TRamp/: TRamp.cpp  TRamp.h
Classes/TRollover/: TRollover.cpp  TRollover.h
Classes/TSink/: TSink.cpp  TSink.h
Classes/TSoloTarget/: TSoloTarget.cpp  TSoloTarget.h
Classes/TSound/: TSound.cpp  TSound.h
Classes/TTableLayer/: TTableLayer.cpp  TTableLayer.h
Classes/TTextBox/: TTextBox.cpp  TTextbox.h
Classes/TTextBoxMessage/: TTextBoxMessage.cpp  TTextBoxMessage.h
Classes/TTimer/: TTimer.cpp  TTimer.h
Classes/TTripwire/: TTripwire.cpp  TTripwire.h
Classes/TWall/: TWall.cpp  TWall.h
Classes/TZmapList/: TZmapList.cpp  TZmaplist.h
Classes/TlightGroup/: TLightGroup.cpp  TLightGroup.h
Forms/: about.cpp  help.cpp  highscore.cpp  options.cpp  winmain.cpp
geometry/: edges.cpp  geometry.cpp
graphics/: flasher.cpp  fullscreen.cpp  graphics.cpp  render.cpp  splash.cpp  timer.cpp
partman/: loader.cpp  partman.cpp
resource/: MANIFEST1_1.txt  pinball.rc
sound/: midi.cpp  sound.cpp  sound.h  wavemix.cpp
